@@ -1,3 +1,10 @@
+2005-07-09  Jakub Jelinek  <jakub@redhat.com>
+
+	Backport from the mainline:
+	2005-06-06  Jakub Jelinek  <jakub@redhat.com>
+	* tree-chrec.c (reset_evolution_in_loop): Use build3 instead of
+	build2.
+
 2005-07-08 Geoffrey Keating  <geoffk@apple.com>
 
 	* tree-inline.c (expand_call_inline): Prevent 'may reach end'
